# AI-Real-Estate-Deal-Intelligence-Machine

./: .env.example  .gitignore  PHASE_23_END_TO_END_SIMULATION_REPORT.md  README.md  main.py  phase23.py  pyproject.toml  test_phase23_simulation.py
ai_real_estate_deal_intelligence_machine/: PHASE_24_ONE_MARKET_PILOT.md  PHASE_25_HUMAN_IN_THE_LOOP.md  PHASE_26_DATA_PROVIDER_INTEGRATION.md  PHASE_27_REAL_DEAL_VALIDATION.md  PHASE_28_AUTONOMY_AND_SAFETY.md  PHASE_30_PRODUCTION_RUNTIME.md  PHASE_31_LIVE_DATA_INTEGRATION.md  PHASE_32_ONE_MARKET_LIVE_PILOT.md  PHASE_39_PRODUCTION_READINESS.md  __init__.py  audit_logger.py  base.py  config.py  db_client.py  integration_harness.py  phase0.py  phase1.py  phase10.py  phase11.py  phase12.py  phase13.py  phase14.py  phase15.py  phase16.py  phase17.py  phase18.py  phase19.py  phase2.py  phase20.py  phase23.py  phase24.py  phase25.py  phase26.py  phase27.py  phase28.py  phase29.py  phase3.py  phase30.py  phase31.py  phase32.py  (+34 more)
ai_real_estate_deal_intelligence_machine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: PHASE_21_SYSTEM_INVENTORY.md  PHASE_22_INTEGRATION_TEST_REPORT.md  phase0-foundation.md  phase0-operating-blueprint.md  phase1-platform-foundation.md  phase3-market-intelligence.md  phase4-property-discovery.md  phase5-opportunity-scoring.md  phase6-underwriting.md  phase7-deal-underwriting.md
prisma/: schema.prisma
tests/: sample_property_data.csv  test_phase0.py  test_phase0_foundation.py  test_phase10_buyer_matching.py  test_phase11_seller_acquisition.py  test_phase12_buyer_disposition.py  (+18 more)
(+3 files in other folders)
